---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 14.07.2023
  Fixes:
    - Fixed exceptions due to changes with Factorio 1.1.87
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 04.11.2022
  Features:
    - Added option to remove temporary stops when keeping the train schedule.
    - Added Home station. Each player can set their Home station in the player mod settings, when pressing 'H' the motorcar will automatically travel to your Home station.
    - Pressing 'SHIFT + H' will send the player to where they last traveled Home from.
      - Important: the last two features overwrite the current schedule, but they will not be stored (0.3.5)
    - Added an Overlay to motor cars from other mods (0.3.0) - needs the Factorio Library mod.
  Fixes:
    - Scale graphic for automatically generated motorcar locomotives that don't use layers.
    - Fixed name of automatically generated motorcars.
  Compatibility:
    - Removed automatically generated motorcars for unusable/hidden items, e.g. from the Cargo Ships mod.
  Contribution:
    - Thanks to Flydiverny for the implementation of this version
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 29.09.2022
  Fixes:
    - Show hint instead of crash if the motor car cannot be spawned
  Compatibility:
    - Do not remove the motor car if the Nav / Remote View from Space Exploration is in use
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 16.08.2022
  Changed:
    - Reworked handling of the driver-state to prevent crashes from other mods (e.g. Space Exploration)
  Compatibility:
    - Updated Jetpack-Check (0.1.5) to only "flying", not "hovering in space"