@@ -3,6 +3,8 @@ Version: 0.4.1
 Date: 14.07.2023
   Fixes:
     - Fixed exceptions due to changes with Factorio 1.1.87
+  Compatibility:
+    - Optimized loading of mod locomotives
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 04.11.2022
